--- a/app/src/main/res/layout/control_center_panel.xml
+++ b/app/src/main/res/layout/control_center_panel.xml
@@ -425,7 +425,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Phím tắt nhanh"
+                    android:text=""
                     android:textColor="#AAAAAA"
                     android:textSize="13sp" />
 
